Fixed alignment selector

--- a/scss/modules/elements/_lists.scss
+++ b/scss/modules/elements/_lists.scss
@@ -41,6 +41,6 @@ li {
 	}
 }
 
-.impress-on-sass li {
+#sass li {
 	text-align: center;
 }
